nginx-pod-test/nginx-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ing
  labels:
    app: nginx
spec:
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: nginx-svc
          servicePort: 80
